workign with file system module and creating api routes for HTTP VERBS

--- a/src/views/partials/template/jsDefaults.ejs
+++ b/src/views/partials/template/jsDefaults.ejs
@@ -5,3 +5,8 @@
 <% if (typeof artwork !== "undefined") { %>
     <script src="/js/pixgrid.js"></script>
     <% } %>
+
+    
+<% if (pageId === "feedback") { %>
+    <script src="/js/feedback.js"></script>
+    <% } %>
