--- a/src/views/partials/template/header.ejs
+++ b/src/views/partials/template/header.ejs
@@ -29,6 +29,7 @@
                            <% }); %>
                         </ul>
                     </li>
+                    <li><a href="/Feedback">Feedback</a></li>
                 </ul>
                 <!-- nav -->
             </div>
